[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "libmambapy"
authors = [
    {name = "Wolf Vollprecht"},
    {name = "Adrien Delsalle"},
    {name = "Jonas Haag"},
    {name = "QuantStack", email = "info@quantstack.net"},
    {name = "Other contributors"},
]
maintainers = [
    {name = "QuantStack", email = "info@quantstack.net"},
]
description = "A fast library to interact with the Conda package ecosystem"
requires-python = ">=3.7"
keywords = ["mamba", "conda", "packaging"]
license = "BSD-3-Clause"
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://mamba.readthedocs.io"
Repository = "https://github.com/mamba-org/mamba/"

[tool.scikit-build]
metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["src/libmambapy/version.py"]

[tool.setuptools_scm]
root = "../"
write_to = "libmambapy/src/libmambapy/version.py"
