[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "libmambapy"
authors = [
    {name = "Wolf Vollprecht"},
    {name = "Adrien Delsalle"},
    {name = "Jonas Haag"},
    {name = "QuantStack", email = "info@quantstack.net"},
    {name = "Other contributors"},
]
maintainers = [
    {name = "QuantStack", email = "info@quantstack.net"},
]
description = "A fast library to interact with the Conda package ecosystem"
requires-python = ">=3.7"
keywords = ["mamba", "conda", "packaging"]
license = "BSD-3-Clause"
dependencies = []
dynamic = ["version"]

[project.urls]
Documentation = "https://mamba.readthedocs.io"
Repository = "https://github.com/mamba-org/mamba/"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
# Which file to read the version information from
input = "src/libmambapy/version.py"
# How to get relevant information from file
regex = '''(?sx)
version_info\s*=\s*\("(?P<major>\d+)",\s*"(?P<minor>\d+)",\s*"(?P<patch>\d+)"\)\s*
version_prerelease\s*=\s*"(?P<pre>\w*)"
'''
# Mamba pre-release have a dot separator, see
# https://github.com/mamba-org/mamba/issues/3638
result = "{major}.{minor}.{patch}.{pre}"
# After creating the result, strip potential trailing dot (when the
# pre-release string is empty)
remove = ".$"
