[metadata]
name = libmambapy
version = attr: libmambapy._version.__version__
description = Python bindings of libmamba
long_description = Python bindings of libmamba, C++ reimplementation of conda
long_description_content_type = text/markdown
license_file = LICENSE
author = QuantStack
author_email = info@quantstack.net
url = https://github.com/mamba-org/mamba
platforms = Windows, Linux, Mac OS X
keywords = mamba, libmamba, conda

[bdist_wheel]
universal = 1

[options]
include_package_data = True
packages = find:
python_requires = >=3.7

install_requires =
  libmamba
